tests/cmp/record-pat-dotdot-no-comma.golden
Parse Error:
tests/cmp/record-pat-dotdot-no-comma.trp:3:12 unexpected token TokenDotDot
